--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install black flake8 pytest
+          pip install black flake8 pytest sphinx
 
       - name: Install markdownlint
         run: npm install -g markdownlint-cli
@@ -55,6 +55,9 @@ jobs:
       - name: Run pytest
         if: steps.docs.outputs.docs_only == 'false'
         run: pytest -v
+
+      - name: Build docs
+        run: sphinx-build -b html docs/source docs/_build
 
       - name: Check links
         run: npx markdown-link-check README.md
