--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,4 +61,4 @@ jobs:
         run: sphinx-build -b html docs/source docs/_build
 
       - name: Check links
-        run: npx markdown-link-check README.md
+        run: npx --yes markdown-link-check README.md
