--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cardiorisk-nn"
-version = "0.1.0"
+version = "0.1.1"
 requires-python = ">=3.10"
 dependencies = [
     "torch==2.3.*",
@@ -22,3 +22,4 @@ cardiorisk-evaluate = "evaluate:main"
 cardiorisk-calibrate = "calibrate:main"
 cardiorisk-cross-validate = "cross_validate:main"
 cardiorisk-baseline = "baseline:main"
+cardiorisk-predict = "predict:main"
