--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cardiorisk-nn"
-version = "0.1.1"
+version = "0.1.2"
 requires-python = ">=3.10"
 dependencies = [
     "torch==2.3.*",
@@ -23,3 +23,19 @@ cardiorisk-calibrate = "calibrate:main"
 cardiorisk-cross-validate = "cross_validate:main"
 cardiorisk-baseline = "baseline:main"
 cardiorisk-predict = "predict:main"
+
+[tool.setuptools]
+py-modules = [
+    "baseline",
+    "calibrate",
+    "cross_validate",
+    "data_utils",
+    "evaluate",
+    "model",
+    "predict",
+    "train",
+    "train_tf",
+]
+
+[tool.setuptools.package-data]
+"*" = ["data/heart.csv"]
